--- a/image/cinc-auditor-arm64/Dockerfile
+++ b/image/cinc-auditor-arm64/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:20.04 AS build
 ARG VERSION=4.37.17
 
 RUN apt-get update \
-  && apt-get install -y locales \
+  && apt-get install -y --no-install-recommends locales \
   && locale-gen en_US.UTF-8 \
   && update-locale LANG=en_US.UTF-8 \
   && apt-get clean \
@@ -18,11 +18,13 @@ RUN mkdir -p /share
 RUN apt-get update \
   && apt-get install --no-install-recommends -y ca-certificates curl \
   && curl -o /tmp/cinc-auditor.deb -L http://downloads.cinc.sh/files/stable/cinc-auditor/${VERSION}/ubuntu/20.04/cinc-auditor_${VERSION}-1_arm64.deb \
-  && apt-get install -y /tmp/cinc-auditor.deb \
-  && rm -f /tmp/cinc-auditor.deb
+  && apt-get install --no-install-recommends -y /tmp/cinc-auditor.deb \
+  && rm -f /tmp/cinc-auditor.deb \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp*
 
 # Install any packages that make life easier for a cinc-auditor installation
-RUN apt-get install -y git
+RUN apt-get install --no-install-recommends -y git
 
 ENTRYPOINT ["cinc-auditor"]
 CMD ["help"]
